# C-course

./: BillDivider.c  CMakeLists.txt  Polynomial.c  Polynomial_horner_rule.c
chapter 2/: LoanCalculator.c  PrintMark.c
chapter 3/: DateDisplayer.c  PointerPrinterTest.c
chapter2/: LoanCalculator.c  SphereVolume.c  TaxCalculator.c  main.c
chapter4/: ean.c  octalConverter.c  upc.c
