cmake_minimum_required(VERSION 3.23)
project(untitled C)

set(CMAKE_C_STANDARD 99)

add_executable(PrintMark chapter2/PrintMark.c)
add_executable(SphereVolume chapter2/SphereVolume.c)
add_executable(TaxCalculator chapter2/TaxCalculator.c)
add_executable(Polynomial chapter2/Polynomial.c)
add_executable(Polynomial_horner_rule chapter2/Polynomial_horner_rule.c)
add_executable(BillDivider chapter2/BillDivider.c)
add_executable(LoanCalculator chapter2/LoanCalculator.c)
add_executable(octalConverter chapter4/octalConverter.c)
add_executable(upc chapter4/upc.c)
add_executable(ean chapter4/ean.c)
